--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@eslint/js": "^9.2.0",
-    "eslint": "^9.2.0",
-    "globals": "^15.1.0"
+    "@eslint/js": "^9.30.0",
+    "@faker-js/faker": "^9.8.0",
+    "eslint": "^9.30.0",
+    "globals": "^15.15.0",
+    "nodemon": "^3.1.10"
   }
 }
